Fix navbar collapsing in small windows

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-  width: 130px;
+  width: auto;
   position: fixed;
   z-index: 1;
   top: 20px;
@@ -8,6 +8,17 @@
   overflow-x: hidden;
   padding: 8px 0;
   margin-top: 10%;
+  display: block;
+  float: left;
+}
+
+.sidebar button {
+  text-align: center;
+  margin-left: .5em;
+  margin-right: .5em;
+  margin-top: 1em;
+  width: 90%;
+  display: block;
 }
 
 .sidebar a {
